Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26104

QIODevice warning when running qmake

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • None
    • 5.0.0
    • Build tools: qmake
    • None
    • Windows 7, MSVC 2008 or 2010
    • I71040c399efe54e7538f54433368b432e959e08d

      When running qmake on certain projects on Windows:

      QIODevice::seek: Cannot call seek on a sequential device
      

      How to reproduce:

      cd examples\dialogs\classwizard
      qmake
      

      Also happens with examples\animation\easing and many other examples. Just try a qmake -r in examples.

      Quick analysis:
      The warning is not printed by qmake but by invoked tools like rcc and uic.
      The warning is printed by uic when opening a QTextStream on stdout. This warning is not printed when running uic -d from the shell (without qmake).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mitch_curtis Mitch Curtis
            jbornema Joerg Bornemann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes